==> mm399-dev-sw/micropython-tiva/ports/tm4c123/mods/sdcard.c <==
#include <string.h>
#include "py/runtime.h"
#include "py/mphal.h"
#include "lib/oofatfs/ff.h"
#include "lib/oofatfs/diskio.h"
#include "extmod/vfs_fat.h"
#include "py/mperrno.h"
#include "inc/hw_memmap.h"
#include "driverlib/pin_map.h"
#include "driverlib/gpio.h"
#include "driverlib/rom.h"
#include "driverlib/rom_map.h"
#include "driverlib/ssi.h"
#include "driverlib/sysctl.h"
#include "mpconfigboard.h"
#include "sdcard.h"
#include "pin.h"
#include "bufhelper.h"
#include "irq.h"
#define MICROPY_HW_SDCARD_DETECT_PRESENT (1)
#define CMD0    (0x40+0)    /* GO_IDLE_STATE */
#define CMD1    (0x40+1)    /* SEND_OP_COND */
#define CMD8    (0x40+8)    /* SEND_IF_COND */
#define CMD9    (0x40+9)    /* SEND_CSD */
#define CMD10    (0x40+10)    /* SEND_CID */
#define CMD12    (0x40+12)    /* STOP_TRANSMISSION */
#define CMD16    (0x40+16)    /* SET_BLOCKLEN */
#define CMD17    (0x40+17)    /* READ_SINGLE_BLOCK */
#define CMD18    (0x40+18)    /* READ_MULTIPLE_BLOCK */
#define CMD23    (0x40+23)    /* SET_BLOCK_COUNT */
#define CMD24    (0x40+24)    /* WRITE_BLOCK */
#define CMD25    (0x40+25)    /* WRITE_MULTIPLE_BLOCK */
#define CMD41    (0x40+41)    /* SEND_OP_COND (ACMD) */
#define CMD55    (0x40+55)    /* APP_CMD */
#define CMD58    (0x40+58)    /* READ_OCR */
#define SDC_SSI_BASE            SSI2_BASE
#define SDC_SSI_SYSCTL_PERIPH   SYSCTL_PERIPH_SSI2
#define SDC_GPIO_PORT_BASE      GPIO_PORTB_AHB_BASE
#define SDC_GPIO_SYSCTL_PERIPH  SYSCTL_PERIPH_GPIOB

bool sdcard_is_present(void) {
    if(mp_hal_pin_read(MICROPY_HW_SDCARD_DETECT_PIN)) {
        Stat &= ~STA_NODISK;
        return true;
    } else {
        Stat |= STA_NODISK;
        return false; 
    }
}

bool sdcard_power_on(void) {
    if (!sdcard_is_present()) {
        return false;
    }
    sd_power_on();
    // TODO
    // if (sdc) {
    //     sdcard_power_off();
    //     goto error;
    // }

    return true;

// error:

//     return false;
}

void sdcard_power_off(void) {
    sd_power_off();
}

uint64_t sdcard_get_capacity_in_bytes(void) {
    uint32_t size, count;
    sd_disk_ioctl(0, GET_SECTOR_SIZE, &size);
    sd_disk_ioctl(0, GET_SECTOR_COUNT, &count);
    return (uint64_t)size * (uint64_t)count;
}

STATIC int sdcard_wait_finished(uint32_t timeout) {
    // Wait for HAL driver to be ready (eg for DMA to finish)
    uint32_t start = HAL_GetTick();
    for (;;) {
        // Do an atomic check of the state; WFI will exit even if IRQs are disabled
        uint32_t irq_state = disable_irq();
        if (!MAP_SSIBusy(SDC_GPIO_PORT_BASE)) {
            enable_irq(irq_state);
            break;
        }
        __WFI();
        enable_irq(irq_state);
        if (HAL_GetTick() - start >= timeout) {
            return MP_ETIMEDOUT;
        }
    }

    // Wait for SD card to complete the operation
    // for (;;) {
    //     HAL_SD_CardStateTypedef state = HAL_SD_GetCardState(sd);
    //     if (state == HAL_SD_CARD_TRANSFER) {
    //         return HAL_OK;
    //     }
    //     if (!(state == HAL_SD_CARD_SENDING || state == HAL_SD_CARD_RECEIVING || state == HAL_SD_CARD_PROGRAMMING)) {
    //         return HAL_ERROR;
    //     }
    //     if (HAL_GetTick() - start >= timeout) {
    //         return HAL_TIMEOUT;
    //     }
    //     __WFI();
    // }
    return RES_OK;
}

mp_uint_t sdcard_read_blocks(uint8_t *dest, uint32_t block_num, uint32_t num_blocks) {
    // check that SD card is initialised
    // if (sd_handle.Instance == NULL) {
    //     return HAL_ERROR;
    // }

    DRESULT err = RES_OK;

    // check that dest pointer is aligned on a 4-byte boundary
    uint8_t *orig_dest = NULL;
    uint32_t saved_word;
    if (((uint32_t)dest & 3) != 0) {
        // Pointer is not aligned so it needs fixing.
        // We could allocate a temporary block of RAM (as sdcard_write_blocks
        // does) but instead we are going to use the dest buffer inplace.  We
        // are going to align the pointer, save the initial word at the aligned
        // location, read into the aligned memory, move the memory back to the
        // unaligned location, then restore the initial bytes at the aligned
        // location.  We should have no trouble doing this as those initial
        // bytes at the aligned location should be able to be changed for the
        // duration of this function call.
        orig_dest = dest;
        dest = (uint8_t*)((uint32_t)dest & ~3);
        saved_word = *(uint32_t*)dest;
    }
#if MICROPY_HW_DMA
    if (query_irq() == IRQ_STATE_ENABLED) {
        // we must disable USB irqs to prevent MSC contention with SD card
        uint32_t basepri = raise_irq_pri(IRQ_PRI_OTG_FS);

        #if SDIO_USE_GPDMA
        dma_init(&sd_rx_dma, &SDMMC_RX_DMA, &sd_handle);
        sd_handle.hdmarx = &sd_rx_dma;
        #endif

        // make sure cache is flushed and invalidated so when DMA updates the RAM
        // from reading the peripheral the CPU then reads the new data
        // TODO
        // MP_HAL_CLEANINVALIDATE_DCACHE(dest, num_blocks * SDCARD_BLOCK_SIZE);

        err = sd_disk_read_dma(0, dest, block_num, num_blocks);
        if (err == RES_OK) {
            err = sdcard_wait_finished(60000);
        }

        #if SDIO_USE_GPDMA
        dma_deinit(&SDMMC_RX_DMA);
        sd_handle.hdmarx = NULL;
        #endif

        restore_irq_pri(basepri);
    } else {
#endif
        err = sd_disk_read(0, dest, block_num, num_blocks);
        if (err == RES_OK) {
            err = sdcard_wait_finished(60000);
        }
#if MICROPY_HW_DMA
    }
#endif

    if (orig_dest != NULL) {
        // move the read data to the non-aligned position, and restore the initial bytes
        memmove(orig_dest, dest, num_blocks * SDCARD_BLOCK_SIZE);
        memcpy(dest, &saved_word, orig_dest - dest);
    }

    return err;
}

mp_uint_t sdcard_write_blocks(const uint8_t *src, uint32_t block_num, uint32_t num_blocks) {
    // check that SD card is initialised
    // if (sd_handle.Instance == NULL) {
    //     return HAL_ERROR;
    // }

    DRESULT err = RES_OK;

    // check that src pointer is aligned on a 4-byte boundary
    if (((uint32_t)src & 3) != 0) {
        // pointer is not aligned, so allocate a temporary block to do the write
        uint8_t *src_aligned = m_new_maybe(uint8_t, SDCARD_BLOCK_SIZE);
        if (src_aligned == NULL) {
            return MP_EFAULT;
        }
        for (size_t i = 0; i < num_blocks; ++i) {
            memcpy(src_aligned, src + i * SDCARD_BLOCK_SIZE, SDCARD_BLOCK_SIZE);
            err = sdcard_write_blocks(src_aligned, block_num + i, 1);
            if (err != RES_OK) {
                break;
            }
        }
        m_del(uint8_t, src_aligned, SDCARD_BLOCK_SIZE);
        return err;
    }
#if MICROPY_HW_DMA
    if (query_irq() == IRQ_STATE_ENABLED) {
        // we must disable USB irqs to prevent MSC contention with SD card
        uint32_t basepri = raise_irq_pri(IRQ_PRI_OTG_FS);

        #if SDIO_USE_GPDMA
        dma_init(&sd_tx_dma, &SDMMC_TX_DMA, &sd_handle);
        sd_handle.hdmatx = &sd_tx_dma;
        #endif

        // make sure cache is flushed to RAM so the DMA can read the correct data
        // MP_HAL_CLEAN_DCACHE(src, num_blocks * SDCARD_BLOCK_SIZE);

        err = sd_disk_write_dma(0,(uint8_t*)src, block_num, num_blocks);
        if (err == RES_OK) {
            err = sdcard_wait_finished(60000);
        }

        #if SDIO_USE_GPDMA
        dma_deinit(&SDMMC_TX_DMA);
        sd_handle.hdmatx = NULL;
        #endif

        restore_irq_pri(basepri);
    } else {
#endif
        err = sd_disk_write(0,(uint8_t*)src, block_num, num_blocks);
        if (err == RES_OK) {
            err = sdcard_wait_finished(60000);
        }
#if MICROPY_HW_DMA
    }
#endif
    return err;
}

STATIC mp_obj_t sd_info(mp_obj_t self) {
    uint8_t csd[16];
    sdcard_read_csd(csd);
    uint64_t size = 0;
    uint bl_size = 0;
    int card_type = (csd[15] & 0b11000000) >> 6; // 0 == v1 SD, 1 == v2 SDHC/XC
    if(card_type) {
        // SDHC XC
        uint32_t c_size = (uint32_t)(csd[6]) + ((uint32_t)(csd[7]) << 8) + (((uint32_t)(csd[8]) & 0b00111111) << 16);
        size = (uint64_t)((c_size + 1) * 512000);
    } else {
        // SD
        uint16_t c_size = ((csd[7] & 0b11000000) >> 6) +  ((uint16_t)(csd[8] & 0b11111111) << 2) + ((uint16_t)(csd[9] & 0b00000011) << 10);
        uint16_t c_size_multi = (csd[5] & 0b00000001) + ((csd[6] & 0b00000011) << 1);
        uint16_t bl_len = (csd[10] & 0b00001111);
        bl_len = (1 << bl_len);
        bl_size = bl_len;
        c_size_multi = (1 << (c_size_multi+2));
        size = (uint64_t)((c_size + 1) * c_size_multi * bl_len);
    }
    mp_obj_t tuple[3] = {
        mp_obj_new_int_from_ull(size),
        mp_obj_new_int_from_uint(bl_size),
        mp_obj_new_int(card_type),
    };
    return mp_obj_new_tuple(3, tuple);
}

STATIC mp_obj_t sd_read(mp_obj_t self, mp_obj_t block_num) {
    uint8_t *dest = m_new(uint8_t, SDCARD_BLOCK_SIZE);
    mp_uint_t ret = sdcard_read_blocks(dest, mp_obj_get_int(block_num), 1);

    if (ret != 0) {
        m_del(uint8_t, dest, SDCARD_BLOCK_SIZE);
        nlr_raise(mp_obj_new_exception_msg_varg(&mp_type_Exception, "sdcard_read_blocks failed [%u]", ret));
    }

    return mp_obj_new_bytearray_by_ref(SDCARD_BLOCK_SIZE, dest);
}

STATIC mp_obj_t sd_write(mp_obj_t self, mp_obj_t block_num, mp_obj_t data) {
    mp_buffer_info_t bufinfo;
    mp_get_buffer_raise(data, &bufinfo, MP_BUFFER_READ);
    if (bufinfo.len % SDCARD_BLOCK_SIZE != 0) {
        nlr_raise(mp_obj_new_exception_msg_varg(&mp_type_ValueError, "writes must be a multiple of %d bytes", SDCARD_BLOCK_SIZE));
    }

    mp_uint_t ret = sdcard_write_blocks(bufinfo.buf, mp_obj_get_int(block_num), bufinfo.len / SDCARD_BLOCK_SIZE);

    if (ret != 0) {
        nlr_raise(mp_obj_new_exception_msg_varg(&mp_type_Exception, "sdcard_write_blocks failed [%u]", ret));
    }

    return mp_const_none;
}

STATIC mp_obj_t pyb_sdcard_ioctl(mp_obj_t self, mp_obj_t cmd_in, mp_obj_t arg_in) {
    mp_int_t cmd = mp_obj_get_int(cmd_in);
    switch (cmd) {
        case BP_IOCTL_INIT:
            if (!sd_disk_init(0)) {
                return MP_OBJ_NEW_SMALL_INT(-1); // error
            }
            return MP_OBJ_NEW_SMALL_INT(0); // success

        case BP_IOCTL_DEINIT:
            sdcard_power_off();
            return MP_OBJ_NEW_SMALL_INT(0); // success

        case BP_IOCTL_SYNC:
            // nothing to do
            return MP_OBJ_NEW_SMALL_INT(0); // success

        case BP_IOCTL_SEC_COUNT:
            return MP_OBJ_NEW_SMALL_INT(sdcard_get_capacity_in_bytes() / SDCARD_BLOCK_SIZE);

        case BP_IOCTL_SEC_SIZE:
            return MP_OBJ_NEW_SMALL_INT(SDCARD_BLOCK_SIZE);

        default: // unknown command
            return MP_OBJ_NEW_SMALL_INT(-1); // error
    }
}

void sdcard_init_vfs(fs_user_mount_t *vfs, int part) {
    vfs->base.type = &mp_fat_vfs_type;
    vfs->flags |= FSUSER_NATIVE | FSUSER_HAVE_IOCTL;
    vfs->fatfs.drv = vfs;
    vfs->fatfs.part = part;
    vfs->readblocks[0] = (mp_obj_t)&pyb_sdcard_readblocks_obj;
    vfs->readblocks[1] = (mp_obj_t)&pyb_sdcard_obj;
    vfs->readblocks[2] = (mp_obj_t)sdcard_read_blocks; // native version
    vfs->writeblocks[0] = (mp_obj_t)&pyb_sdcard_writeblocks_obj;
    vfs->writeblocks[1] = (mp_obj_t)&pyb_sdcard_obj;
    vfs->writeblocks[2] = (mp_obj_t)sdcard_write_blocks; // native version
    vfs->u.ioctl[0] = (mp_obj_t)&pyb_sdcard_ioctl_obj;
    vfs->u.ioctl[1] = (mp_obj_t)&pyb_sdcard_obj;
}
